--- a/src/App.css
+++ b/src/App.css
@@ -1,63 +1,130 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-body{
+body {
   background-color: #e7e7e7;
 }
-.App{
-  width: 500px;
+.App {
+  width: 50%;
   margin: 50px auto;
 }
-.todo-input{
+h1 {
+  margin-bottom: 15px;
+  color: rgb(0, 140, 255);
+}
+.todo-input {
   height: 50px;
+  border-radius: 10px;
   display: flex;
+  align-items: center;
+  background-color: white;
+  justify-content: space-between;
+  padding-left: 40px;
+  padding-right: 20px;
+  box-shadow: 0px 0px 10px 1px rgba(87, 87, 87, 0.75);
 }
-.todo-input input{
+.todo-input input {
+  margin-top: 4px;
   width: 90%;
-  height: 100%;
-  font-size: 20px;
-  padding-left: 5px;
+  height: 70%;
+  font-size: 16px;
+  display: flex;
+  align-items: center;
+  border: none;
+  outline: none;
 }
-.todo-input button{
-  width: 10%;
-  height: 50px;
+.todo-input button {
+  width: 30px;
+  height: 30px;
   font-size: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: rgb(0, 140, 255);
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
-.todo-container{
-  padding-top: 20px;
+.todo-container {
+  padding: 20px;
+  padding-top: 10px;
+  padding-left: 5px;
+  margin-top: 40px;
+  border-radius: 10px 10px 0 0;
+  height: 400px;
+  overflow-y: scroll;
+  -ms-overflow-style: none;
+  background-color: white;
+  box-shadow: 0px 0px 10px 1px rgba(87, 87, 87, 0.75);
+  border-bottom: 1px solid gray;
 }
-.todo-container .todo{
+.todo-container::-webkit-scrollbar {
+  width: 6px;
+}
+.todo-container::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  box-shadow: inset 0 0 6px rgba(171, 171, 188, 0.5);
+}
+.todo-container .todo {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 0px;
-  border-bottom: 1px solid black;
+  padding: 10px 15px;
+  border-bottom: 1px solid rgb(167, 167, 167);
   font-size: 20px;
+  transition: all 0.6s ease-out;
 }
-.todo-container .todo>div input{
-  margin-right: 5px;
+.todo-container .todo > div {
+  position: relative;
 }
-.todo-container .todo .deleter{
-  outline-color: red;
+.todo-container .todo > div input {
+  margin-right: 10px;
+  width: 20px;
+  height: 20px;
+  position: relative;
+  top: 3px;
+  cursor: pointer;
 }
-.clear{
-  margin-top: 10px;
+.todo-container .todo .deleter {
+  color: red;
+  cursor: pointer;
+}
+.count_clear {
+  height: 70px;
+  border-radius: 0px 0px 20px 20px;
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  box-shadow: 0px 0px 10px 1px rgba(87, 87, 87, 0.75);
+}
+.count_clear .clear {
   height: 40px;
   width: 150px;
+  background-color: white;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 18px;
-  color: gray;
-  float: right;
+  font-size: 16px;
+  color: red;
+  transition: 0.5s;
 }
-@media (max-width:600px) {
-  .App{
+.count_clear .clear:hover {
+  background-color: red;
+  color: white;
+}
+.count_clear span {
+  font-size: 20px;
+}
+@media (max-width: 600px) {
+  .App {
     width: 90%;
   }
 }
