--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
 * {
   margin: 0;
   padding: 0;
@@ -103,7 +103,7 @@ h1 {
   align-items: center;
   padding: 20px;
   box-shadow: 0px 0px 10px 1px rgba(87, 87, 87, 0.75);
-  color: rgb(0, 140, 255);
+  color: rgb(29, 143, 236);
   font-weight: 500;
 }
 .count_clear .clear {
